# sandbox-project

./: README.md
counter/: README.md
counter/frontend/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
counter/frontend/src/: main.rs
counter/src-tauri/: tauri.conf.json
drive/: main.ts
drive/routes/: index.tsx
picobrick/: .envrc  README.md  dht.py  main.py  picolab.py  pyproject.toml  version.py  ws2812.py
