[tool.poetry]
name = "picobrick"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poe.tasks]
version = { shell = "ampy --port $PI_PORT run version.py" }

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
poethepoet = "^0.16.0"
adafruit-ampy = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
